remove unused variables (#395)